--- a/style.css
+++ b/style.css
@@ -9,6 +9,38 @@ header {
     background: #511845;
 }
 
+header article {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 150px;
+    margin: 0px 10px;
+}
+
+header article.avatar img {
+    border-radius: 50%;
+    border: 4px solid white;
+}
+
+header article.info {
+    display: flex;
+    vertical-align: middle;
+}
+
+header article.info p {
+    margin: 10px 10px;
+}
+
+header article.info p.description {
+    margin-bottom: 10px;
+}
+
+header article.info p.contact {
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
 section {
     background: #900C3F;
 }
@@ -37,8 +69,13 @@ footer article p {
     margin: 5px;
 }
 
-a:link, a:visited, a:hover, a:active {
-    color: white;
+a:link, a:visited {
+    color: #e7e7e7;
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    color: #d5d5d5;
     text-decoration: none;
 }
 
