--- a/style.css
+++ b/style.css
@@ -9,36 +9,8 @@ header {
     background: #511845;
 }
 
-header article {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    min-width: 150px;
-    margin: 0px 10px;
-}
-
-header article.avatar img {
-    border-radius: 50%;
-    border: 4px solid white;
-}
-
-header article.info {
-    display: flex;
-    vertical-align: middle;
-}
-
-header article.info p {
-    margin: 10px 10px;
-}
-
-header article.info p.description {
-    margin-bottom: 10px;
-}
-
-header article.info p.contact {
-    margin-top: 3px;
-    margin-bottom: 3px;
+header article p {
+    margin: 5px;
 }
 
 section {
@@ -62,7 +34,8 @@ footer article {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    min-width: 20vw;
+    min-width: 100px;
+    margin: 0px 15px;
 }
 
 footer article p {
@@ -79,7 +52,15 @@ a:hover, a:active {
     text-decoration: none;
 }
 
-.separator, .row {
+.separator {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 50px 20vw;
+}
+
+.row {
     position: relative;
     display: flex;
     flex-direction: column;
